<resources>
    <string name="txt_intro">Guess if the next throw is going to be lower, equal or higher</string>
    <string name="btn_equal">EQUALS</string>
    <string name="btn_lower">LOWER</string>
    <string name="btn_higher">HIGHER</string>
    <string name="app_name">Higher Lower Kotlin</string>
    <string name="title">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="dice">Dice</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>
