<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <TextView
        android:id="@+id/txt_intro"
        android:layout_width="348dp"
        android:layout_height="63dp"
        android:text="@string/txt_intro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/btn_lower"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="526dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_lower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_equals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:layout_marginTop="526dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_higher"
        app:layout_constraintStart_toEndOf="@+id/btn_lower"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro" />

    <Button
        android:id="@+id/btn_higher"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:layout_marginTop="526dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_higher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_equals"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro" />

    <TextView
        android:id="@+id/tvLastThrow"
        android:layout_width="148dp"
        android:layout_height="27dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="123dp"
        android:text="@string/last_throw"
        app:layout_constraintBottom_toTopOf="@+id/btn_lower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/ivDice"
        android:layout_width="167dp"
        android:layout_height="178dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/dice"
        android:src="@drawable/dice1"
        app:layout_constraintBottom_toTopOf="@+id/tvLastThrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro" />

</androidx.constraintlayout.widget.ConstraintLayout>